# uinta

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  TODOs.md  configure  readme.md  todo.md
app/: CMakeLists.txt  app_utils.hpp  main.cpp
app/UintaDesktop/: CMakeLists.txt  glfw.cpp  glfw.h  main.cpp
app/UintaDesktop/proto/: proto.h  protos.h
app/UintaDesktop/proto/debug_ui/: debug_ui_proto.h
app/camera/: main.cpp
app/camera2d/: CMakeLists.txt  camera2drunner.cpp  camera2drunner.hpp  camera_2drunner.cpp  main.cpp
app/camera3d/: CMakeLists.txt  main.cpp  runner.cpp  runner.hpp
app/camera_2d/: CMakeLists.txt  camera_2drunner.cpp  camera_2drunner.hpp  main.cpp
app/cartesian/: main.cpp
app/demo/: main.cpp
app/examples/model_manager/: main.cpp
app/font/: CMakeLists.txt  fontrunner.cpp  fontrunner.hpp  main.cpp
app/font/res/: font.frag  font.vert
app/hexagons/: main.cpp
app/imgui/: CMakeLists.txt  main.cpp
app/include/uinta/glfw/: glfw_input.cpp  glfw_runner.cpp  glfw_runner.hpp  glfw_runner_ui.cpp  glfw_runner_ui.hpp  glfw_ui_scene.cpp  glfw_ui_scene.hpp  imgui.cpp  imgui.h
app/include/uinta/glfw_utils/: glfw_input.cpp  glfw_runner.cpp  glfw_runner.hpp  glfw_runner_ui.cpp  glfw_runner_ui.hpp  imgui.cpp  imgui.h
app/model/: CMakeLists.txt  main.cpp
app/model/res/: model.fs  model.vert  model.vs
app/perlin/: main.cpp
app/post_processing/: PostProcessingCamera.hpp  PostProcessingShaders.hpp  RenderTarget.hpp  main.cpp
app/post_processing/res/: post_processing.frag  post_processing.vert  scene.frag  scene.vert  screen.frag
app/post_processing/res/shader/: base.vs  color.fs  depth.fs  screen.vs  shimmer.fs
app/quadtree/: CMakeLists.txt  main.cpp  quadtreeRunner.cpp  quadtreeRunner.hpp
app/quadtree/res/: quadtree.frag  quadtree.vert
app/ray_picking/: CMakeLists.txt  main.cpp
app/ray_picking/res/: ray_picking.frag
app/runners/: quadtreeRunner.cpp  quadtreeRunner.hpp
app/showcase/: CMakeLists.txt  main.cpp  readme.md  runner.cpp  runner.hpp
app/showcase/src/: debug.cpp  debug.hpp  text_defs.hpp
app/terrain/: main.cpp
app/ui/: font_atlas_scene.cpp  main.cpp
app/utils/: camera_controller.cpp  camera_controller.hpp  cartesian_grid.cpp  cartesian_grid.hpp  cartesian_guides.cpp  cartesian_guides.hpp  debug_controller.cpp  debug_controller.hpp  glfw_input.cpp  glfw_runner.cpp  glfw_runner.cpp_  glfw_runner.hpp  glfw_runner_ui.cpp  glfw_runner_ui.hpp  imgui.cpp  imgui.hpp  imgui_util.cpp  imgui_util.hpp  input.hpp  runner.cpp  runner.hpp  utils.cpp  utils.hpp
src/UintaCore/: CMakeLists.txt
src/UintaCore/include/uinta/: camera.h  colors.h  data.h  debug.h  ecs.h  exception.h  gl.h  input_manager.h  io.h  math.h  model.h  render.h  shader.h  text.h  texture.h  ui.h
src/UintaCore/src/camera/: camera_controller.cpp  camera_ui_controller.cpp  perspective_camera.cpp
src/UintaCore/src/controller/: buffer_controller.cpp  controller.cpp  fps_controller.cpp  tick_controller.cpp
src/UintaCore/src/debug/: camera_ui_controller.cpp  cursor_controller.cpp  debug_controller.cpp  debug_ui.cpp  debug_ui_controller.cpp  debug_ui_shader.cpp  debug_ui_view.cpp  debug_world_controller.cpp  debug_world_shader.cpp  fps_controller.cpp  tick_controller.cpp
src/UintaCore/src/font/: font.cpp  font_loader.h
src/UintaCore/src/gl/: gl_error.cpp  gl_state.cpp
src/UintaCore/src/input/: input_manager.cpp  input_manager_impl.cpp
src/UintaCore/src/io/: file.cpp
src/UintaCore/src/model/: model.cpp
src/UintaCore/src/render/: i_render_controller.cpp  i_renderable.cpp
src/UintaCore/src/shader/: shader.cpp  shader_loader.h  uniform.cpp  vao.cpp  vbo.cpp  vertex_attribute.cpp
src/UintaCore/src/text/: font.cpp  font_loader.h  line.h  text.cpp  text_controller.cpp  text_mesh_generator.h  word.h
src/UintaCore/src/texture/: texture.cpp
src/UintaCore/src/ui/: ui.cpp  ui_element.cpp
src/app/: CMakeLists.txt
src/app/res/: pawn.blend  shader.fs.glsl  shader.vs.glsl
src/app/res/model/: pawn.fbx  teacup.fbx
src/app/res/shader/: camera.fs.glsl  camera.vs.glsl
src/app/src/: demo.h  main.cc
src/app/src/scenes/: fbx_viewer.h  text.h  trees.h
src/engine/: CMakeLists.txt
src/engine/include/uinta/: app_config_yaml.h  camera.h  color.h  component.h  engine.h  engine_signal.h  engine_stage.h  engine_state.h  environment.h  fbo.h  file.h  font.h  manifold_mesh.h  math.h  mesh.h  primitive.h  rbo.h  reflect.h  runtime_getter.h  scene.h  shader.h  system.h  texture.h  uniform.h  vao.h  (+1 more)
src/engine/res/: axis.fs.glsl  axis.vs.glsl  grid.fs.glsl  grid.vs.glsl  primitive.fs.glsl  primitive.vs.glsl  text.fs.glsl  text.vs.glsl
src/engine/src/: app_config_yaml.cc  camera.cc  color.cc  engine.cc  environment.cc  fbo.cc  file.cc  font.cc  manifold_mesh.cc  mesh.cc  primitive.cc  rbo.cc  reflect.cc  scene.cc  shader.cc  texture.cc  uniform.cc  vao.cc  vbo.cc  vbo_guard.cc
src/engine/test/: CMakeLists.txt
src/platform/: CMakeLists.txt
src/platform/cmake/: GLFW.cmake  abseil-cpp.cmake  eventpp.cmake
src/platform/src/: app_config.cc  args.cc  desktop_platform.cc  desktop_window.cc  file.cc  gl.cc  glfw_platform_api.cc  input.cc  monitor.cc  types.cc  window.cc
src/platform/test/: CMakeLists.txt
test/: CMakeLists.txt  fontTest.cpp  main.cpp  mat_test.cpp  metrics_test.cpp  quadTreeTests.cpp  quadtreeTests.cpp  running_avg.cpp  vecTests.cpp
test/math/: mat_test.cpp  smooth_float_test.cpp  vecTests.cpp
test/res/: res_man1.txt  res_man2.txt  res_man3.txt  res_man4.txt
test/tests/: fileManagerTests.cpp  fontTest.cpp  font_tests.cpp  formatters.cpp  hexagon_tests.cpp  input_impl.cpp  math.cpp  metrics_test.cpp  quadtreeTests.cpp  resource.cpp  resourceManagerTests.cpp  runner_tests.cpp  running_avg.cpp  scene_tests.cpp  ui_tests.cpp
test/tests/math/: smooth_float_test.cpp
test/tests/mock/: mock_file_manager.hpp  mock_font_manager.hpp  mock_grid.hpp  mock_runner.hpp  mock_scene.hpp
test/tests/resource/: parsePaths.cpp  resourceManager.cpp
test/tests/utils/: test_file_manager.hpp  test_runner.hpp
(+705 files in other folders)
